--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Home Automation system",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --require babel-register ./test/*.test.js"
+    "test": "mocha --require ./test/*.test.js",
+    "start": "node bin/server.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,20 @@
   "bugs": {
     "url": "https://github.com/3rd-Eden/defcon.1.gif/issues"
   },
-  "homepage": "https://github.com/3rd-Eden/defcon.1.gif#readme"
+  "homepage": "https://github.com/3rd-Eden/defcon.1.gif#readme",
+  "dependencies": {
+    "async": "^2.6.0",
+    "connected": "^0.0.2",
+    "diagnostics": "^1.1.0",
+    "doorbot": "^3.1.0",
+    "millisecond": "^0.1.2",
+    "ms": "^2.1.1",
+    "nconf": "^0.10.0",
+    "request": "^2.83.0",
+    "tick-tock": "^1.0.0"
+  },
+  "devDependencies": {
+    "assume": "^1.5.2",
+    "mocha": "^5.0.1"
+  }
 }
