--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/3rd-Eden/defcon.1.gif.git"
+    "url": "git+https://github.com/3rd-Eden/defcon.1.git"
   },
   "keywords": [
     "defcon",
@@ -19,9 +19,9 @@
   "author": "Arnout Kazemier",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/3rd-Eden/defcon.1.gif/issues"
+    "url": "https://github.com/3rd-Eden/defcon.1/issues"
   },
-  "homepage": "https://github.com/3rd-Eden/defcon.1.gif#readme",
+  "homepage": "https://github.com/3rd-Eden/defcon.1#readme",
   "dependencies": {
     "async": "^2.6.0",
     "connected": "^0.0.2",
